[gd_scene load_steps=6 format=2]

[ext_resource path="res://admob-lib/admob.gd" type="Script" id=1]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://btn_click.wav" type="AudioStream" id=8]
[ext_resource path="res://Roboto-Black.ttf" type="DynamicFontData" id=9]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 9 )

[node name="Main" type="Node2D"]
script = ExtResource( 3 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 143.0
margin_bottom = 256.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 39.0
margin_top = 86.0
margin_right = 104.0
margin_bottom = 169.0

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 65.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.905882, 0.298039, 0.235294, 1 )
text = "Play"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 29.0
margin_right = 65.0
margin_bottom = 54.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.905882, 0.298039, 0.235294, 1 )
text = "Quit"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 58.0
margin_right = 65.0
margin_bottom = 83.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.905882, 0.298039, 0.235294, 1 )
text = "Credits"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="Admob" type="Node" parent="."]
script = ExtResource( 1 )
is_real = true
banner_on_top = false
banner_id = "ca-app-pub-8571450547245888/7863695610"
[connection signal="pressed" from="CenterContainer/VBoxContainer/Button" to="." method="_on_btn_play_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Button2" to="." method="_on_btn_quit_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Button3" to="." method="_on_TextureButton3_pressed"]
[connection signal="banner_failed_to_load" from="Admob" to="." method="_on_Admob_banner_failed_to_load"]
